# sclp

./: .gitignore  CMakeDoxygen.cmake  CMakeLists.txt  CMakePresets.json  CMakeScripts.cmake  Doxyfile  Doxyfile.in  mod.cmake
include/: action.h  effect.h  entity.h  health.h  identifier.h  logentry.h  logparser.h  parser.h  parsing_utils.h  quant.h  vector.h
src/: CMakeLists.txt  action.cpp  effect.cpp  entity.cpp  health.cpp  identifier.cpp  logentry.cpp  logparser.cpp  main.cpp  parser.cpp  parsing_utils.cpp  quant.cpp  vector.cpp
test/: CDashConfig.cmake  CMakeLists.txt  CTestConfig.cmake  parsetest.h  test_memory.cpp
test/lvl_0/: test_effect.cpp  test_health.cpp  test_identifier.cpp  test_quant.cpp  test_vector.cpp
test/lvl_1/: test_action.cpp  test_entity.cpp
test/lvl_2/: test_logentry.cpp  test_logparser.cpp
